backend-app/kubernetes/webapp-backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp-backend
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: webapp-backend
  type: ClusterIP
